crates/mcb-server/tests/contract/snapshots/contract__validate_contract_tests__validate_happy_path.snap
---
source: crates/mcb-server/tests/contract/validate_contract_tests.rs
assertion_line: 12
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "list_rules",
      "arguments": {}
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "result": {
      "resultType": "complete",
      "content": [
        {
          "type": "text",
          "text": "{\n  \"validators\": [\n    \"async_patterns\",\n    \"clean_architecture\",\n    \"declarative_rules\",\n    \"dependency\",\n    \"documentation\",\n    \"error_boundary\",\n    \"hygiene\",\n    \"implementation\",\n    \"kiss\",\n    \"layer_flow\",\n    \"naming\",\n    \"organization\",\n    \"pattern\",\n    \"performance\",\n    \"port_adapter\",\n    \"quality\",\n    \"refactoring\",\n    \"solid\",\n    \"visibility\"\n  ],\n  \"count\": 19,\n  \"description\": \"Available validation rules\"\n}"
        }
      ],
      "isError": false
    },
    "id": 1
  }
}
